--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -5,11 +5,27 @@ body {
 
 }
 
+/* HEADINGS */
+
 .header--main {
     font-weight: normal;
     font-size: 50px;
     color: white;
 }
+
+.header--secondary {
+    font-size: 42px;
+    font-weight: 300;
+    color: white;
+
+}
+
+.header--sub-header {
+    font-size: 21px;
+    color: grey;
+}
+
+/* LINKS */
 
 .link--cta {
     font-size: 16px;
